[project]
name = "project1-shevchenko-sergey"
version = "0.1.0"
description = ""
authors = [
    {name = "sunpieeyes", email = "revaginiti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
project = "labyrinth_game.main:main"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
